--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -11,8 +11,8 @@ http {
 		
     server_name conciliador.dev;
 		
-    ssl_certificate /ssl/conciliador.dev+1.pem;
-		ssl_certificate_key /ssl/conciliador.dev+1-key.pem;
+    ssl_certificate /ssl/cert.pem;
+		ssl_certificate_key /ssl/key.pem;
 		# ssl_protocols TLSv1.2;
 
 		# access_log /log/access.log;
@@ -35,8 +35,8 @@ http {
 		
     server_name api.conciliador.dev;
 		
-    ssl_certificate /ssl/conciliador.dev+1.pem;
-		ssl_certificate_key /ssl/conciliador.dev+1-key.pem;
+    ssl_certificate /ssl/cert.pem;
+		ssl_certificate_key /ssl/key.pem;
     # ssl_certificate /ssl/cert.pem;
 		# ssl_certificate_key /ssl/key.pem;
 		# ssl_protocols TLSv1.2;
