--- a/frontend/web/Dockerfile
+++ b/frontend/web/Dockerfile
@@ -1,3 +1,15 @@
+FROM node:16-alpine AS development
+
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
+
+WORKDIR /usr/src/web
+
+# Install dependencies based on the preferred package manager
+COPY package.json yarn.lock ./
+
+RUN yarn install --frozen-lockfile
+
 # Install dependencies only when needed
 FROM node:16-alpine AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
@@ -26,25 +38,6 @@ COPY . .
 # ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN yarn build
-
-
-# Production image, copy all the files and run next
-FROM node:16-alpine AS development
-WORKDIR /app
-
-USER node
-
-ENV NODE_ENV development
-
-COPY --from=deps --chown=node:node /app/node_modules ./node_modules
-COPY --chown=node:node . .
-
-
-EXPOSE 3000
-
-ENV PORT 3000
-
-CMD ["yarn", "dev"]
 
 # If using npm comment out above and use below instead
 # RUN npm run build
