--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
     listen 443 ssl;
     listen [::]:443 ssl;
 		
-    server_name conciliador.dev;
+    server_name docker-ssl.dev;
 		
     ssl_certificate /ssl/cert.pem;
 		ssl_certificate_key /ssl/key.pem;
@@ -33,7 +33,7 @@ http {
     listen 443 ssl;
     listen [::]:443 ssl;
 		
-    server_name api.conciliador.dev;
+    server_name api.docker-ssl.dev;
 		
     ssl_certificate /ssl/cert.pem;
 		ssl_certificate_key /ssl/key.pem;
