--- a/frontend/web/Dockerfile
+++ b/frontend/web/Dockerfile
@@ -1,14 +1,16 @@
 FROM node:16-alpine AS development
 
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+RUN apk update && \
+  apk add --no-cache libc6-compat && \
+  apk add ca-certificates && \
+  rm -rf /var/cache/apk/*
 
 WORKDIR /usr/src/web
 
-# Install dependencies based on the preferred package manager
 COPY package.json yarn.lock ./
-
 RUN yarn install --frozen-lockfile
+COPY . .
 
 # Install dependencies only when needed
 FROM node:16-alpine AS deps
