--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       dockerfile: Dockerfile
       target: development
     command: yarn start:dev
+    environment:
+      # skips certificate validation when request incomming inside container
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
     ports:
       - '4000:4000'
     volumes:
@@ -16,20 +19,23 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
-      - api
+      - docker-ssl
   web:
     container_name: web
     build:
-      context: ./frontend/web
+      context: frontend/web
       dockerfile: Dockerfile
       target: development
     command: yarn dev
     ports:
       - '3000:3000'
+    environment:
+      # skips certificate validation when request incomming inside container
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
     depends_on:
       - api
     networks:
-      - web
+      - docker-ssl
     volumes:
       - ./frontend/web/:/usr/src/web
       - /usr/src/web/node_modules
@@ -43,18 +49,18 @@ services:
       - "80:80"
     restart: unless-stopped
     networks:
-      - api
-      - web
+      - docker-ssl
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - web
       - api
     volumes:
       - ./.docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./.docker/nginx/certs:/ssl
+      - ./.docker/nginx/certs/cert.pem:/ssl/cert.pem
+      - ./.docker/nginx/certs/key.pem:/ssl/key.pem
       - ./.docker/nginx/log:/log
 
 networks:
-  api:
-    driver: bridge
-  web:
+  docker-ssl:
     driver: bridge
